--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <h1>KEZDESU</h1>
 
             <!-- Sub title -->
-            <p style="text-align:left !important;">Первое мобильное приложение для поиска образовательных и спортивных мероприятиях в Алматы</p>
+            <p style="text-align:center !important;">Первое мобильное приложение для поиска образовательных и спортивных мероприятиях в Алматы</p>
 
             <!-- Button -->
             <p class="btn-app-store">
