--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             
             <!-- Footer 1 -->
             <section>
-              <p>Made with <i class="fa fa-heart"></i> by Umirzakov Madiyar.</p>
+              <p>Made with <i class="fa fa-heart"></i> by Umirzakov Madiyar. madiyar.omirzakov2000@gmail.com</p>
             </section>
 
 
