--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
     <nav class="side-nav" role="navigation">
 
       <ul class="nav-side-nav">
-        <li><a class="tooltip-side-nav" href="#section-1" title="" data-original-title="Services" data-placement="left"></a></li>
-        <li><a class="tooltip-side-nav" href="#section-2" title="" data-original-title="Features" data-placement="left"></a></li>
-        <li><a class="tooltip-side-nav" href="#section-3" title="" data-original-title="Subscribe" data-placement="left"></a></li>
-        <li><a class="tooltip-side-nav" href="#to-top" title="" data-original-title="Back" data-placement="left"></a></li>
+        <li><a class="tooltip-side-nav" href="#section-1" title="" data-original-title="Сервисы" data-placement="left"></a></li>
+        <li><a class="tooltip-side-nav" href="#section-2" title="" data-original-title="Возможности" data-placement="left"></a></li>
+        <li><a class="tooltip-side-nav" href="#to-top" title="" data-original-title="Назад" data-placement="left"></a></li>
       </ul>
       
     </nav> <!-- /.side-nav -->
